--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -8,13 +8,6 @@
 
 \maketitle
 
-\section{Introducción} 
-Esta es la Introducción del informe.
-
-\section{Desarrollo}
-%
-
-\section{Conclusiones}
-%
+texto de ejemplo
 
 \end{document}
