--- a/presentacion/presentacion.tex
+++ b/presentacion/presentacion.tex
@@ -8,13 +8,6 @@
 
 \maketitle
 
-\section{Introducción} 
-%
-
-\section{Desarrollo}
-%
-
-\section{Conclusiones}
-%
+texto de ejemplo
 
 \end{document}
